<resources>
    <string name="app_name">BiogasHome</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="safety_b1">When manure is anaerobically digested, the biogas produced is primarily
        composed of methane and carbon dioxide, with lesser amounts of hydrogen sulfide, ammonia, and
        gases. Each of these gases has safety issues. Overall, biogas risks include explosion, asphyxiation,
        disease, and hydrogen sulfide poisoning.\nExtreme caution is necessary when working with biogas.
        Adequate ventilation, appropriate precautions, good work practices, engineering controls, and adequate
        personal protective equipment will minimize the dangers associated with biogas.\nWherever possible,
        digester-associated tasks and maintenance should be performed without anyone having to enter confined
        spaces, including pits.\nSystems should be initially designed so that confined space entry is not required
        to perform maintenance.</string>
    <string name="safety_b2txt">Methane, approximately 60% of biogas, forms explosive mixtures in air.
        If biogas is diluted between 10% and 30% with air, there is an explosion hazard.\nFor instance, in 2003, several
        explosions on Canadian swine farms were thought to have been caused by the methane in biogas exploding
        (Choinière, 2004). Hydrogen sulfide and ammonia are also potentially explosive.\nBecause of the explosion
        hazards, no open flames should ever be used near a digester.\nAlso, equipment such as large engines and electric
        generators must be suitable to the environment so a spark will not ignite the gas.\nExplosion-proof equipment
        and electrical service, as well as non-sparking tools, should be used around digesters and biogas.\nThere MUST
        be no smoking near the digester or related biogas lines and equipment.</string>
    <string name="safety_b3">Asphyxiation is a process or state of being deprived of oxygen.\nAsphyxiation from biogas is a concern in an enclosed space where manure is stored.\n
        Osbern and Crapo (1981) report one case of three people who died from asphyxiation created by swine manure
        gas in an enclosed space. Even open-topped manure pits can generate methane at a sufficient rate to push out
        the air above the manure and render the space oxygen-deficient.\n Never enter a facility where manure is stored
        or where there is a suspected biogas leak as natural ventilation cannot be trusted to dilute the explosion
        hazard sufficiently.\nAiring out a facility does not impart safety, as some of the gases produced are heavier
        than air.\nIf a person is found unconscious in such a facility, do not enter the facility because you may be
        overcome as well.\nContact emergency services so that firefighters wearing self-contained breathing apparatus
        (SCBA) can safely retrieve the victim.</string>
    <string name="safety_b4">Animal manure contains bacteria, viruses and, possibly, parasites.\nBiogas is generated by
        the anaerobic digestion of manure, which occurs because of the bacteria present in animal wastes, some of which
        can produce infection.\nWhen handling waste material, exercise appropriate precautions by using personal protective
        equipment to avoid contact with manure. Washing after working around the digester is recommended.\nIt is
        particularly recommended to wash hands before eating and drinking and before touching the eyes or other mucous
        membranes.\nKeeping the digester facility clean will reduce disease hazards as well as the spread of odors and
        fly populations in the digester facility.</string>
    <string name="safety_b5_1">Always contact the designer or expert who assisted in setting up the plant,
        in case you are not the one. Failure to heed manufacturer warnings may result in death or serious
        injury. Contact the manufacturer for maintenance and service requirements and availability of service.</string>
    <string name="safety_b5_2">A safety walk-through can help you determine potential hazards and preventative
        measures. Cornell University developed a comprehensive self-assessment guideline for farmers. It is
        intended to be used by farm owners and managers or farm staff who are responsible for the operations
        and/or maintenance of anaerobic digesters and their related processes. It provides guidance for process
        and job evaluation with suggestions based on typical potential hazards for farm digester systems and their
        associated preventative measures.</string>
    <string name="safety_b5_3">Explosion, suffocation, and poisonous gas hazards may be detected using gas sensors.
        These sensors include both disposable and electronic sensors. Electronic sensors need testing regularly,
        and these sensors may have a disposable component that needs periodic replacement. Only qualified people
        should use these sensors to determine if an area is safe.\n\n</string>
    <string name="ben_b1">Biogas is a renewable, as well as a clean, source of energy.\nGas generated through
        biodigestion is non-polluting; it actually reduces greenhouse emissions (i.e. reduces the greenhouse
        effect).\n\nNo combustion takes place in the process, meaning there is zero emission of greenhouse gasses
        to the atmosphere; therefore, using gas from waste as a form of energy is actually a great way to combat
        global warming. Unsurprisingly, concern for the environment is a major reason why the use of biogas has
        become more widespread.\n\nBiogas plants significantly curb the greenhouse effect: the plants lower methane
        emissions by capturing this harmful gas and using it as fuel.\n\nBiogas generation helps cut reliance on the
        use of fossil fuels, such as oil and coal. Another biogas advantage is that, unlike other types of renewable
        energies, the process is natural, not requiring energy for the generation process.\nIn addition, the raw materials
        used in the production of biogas are renewable, as trees and crops will continue to grow.\n\nManure, food scraps,
        and crop residue are raw materials that will always be available, which makes it a highly sustainable option.</string>
    <string name="ben_b2">Overflowing landfills don’t only spread foul smells- they also allow toxic liquids
        to drain into underground water sources.
        Consequently, yet another advantage of biogas is that biogas generation may improve water quality.
        Moreover, anaerobic digestion deactivates pathogens and parasites; thus, it’s also quite effective
        in reducing the incidence of waterborne diseases. Similarly, waste collection, and management,
        significantly improve in areas with biogas plants. This, in turn, leads to improvements in the
        environment, sanitation, and hygiene.</string>
    <string name="ben_b3">The by-product of the biogas generation process is enriched organic (digestate),
        which is a perfect supplement to, or substitute for, chemical fertilizers. The fertilizer discharge
        from the digester can accelerate plant growth and resilience to diseases, whereas commercial fertilizers
        contain chemicals that have toxic effects and can cause food poisoning, among other things.</string>
    <string name="ben_b4">The technology used to produce biogas is quite cheap. It is easy to set up and needs
        little investment when on a small scale. Small biodigesters can be used right at home, utilizing kitchen
        waste and animal manure. A household system pays for itself after a while, and the materials used for
        generation are absolutely free. The gas manifested can be used directly for cooking and generation of
        electricity. This is what allows the cost of biogas production to be relatively low. Farms can make use
        of biogas plants and waste products produced by their livestock every day. The waste products of one cow
        can provide enough energy to power a light bulb for an entire day. In large plants, biogas can also be
        compressed to achieve the quality of natural gas, and utilized to power automobiles. Building such plants
        requires relatively low capital investment, and creates green jobs. For instance, in India, 10 million jobs
        were created, mostly in rural areas, in plants and in organic waste collection.</string>
    <string name="ben_b5">Biogas generators save women and children from the daunting task of firewood collection.
        As a result, more time is left over for cooking and clean. More importantly, cooking on a gas stove, instead
        of over an open fire, prevents the family from being exposed to smoke in the kitchen. This helps prevent deadly
        respiratory diseases. Sadly, 4.3 million people a year die prematurely from illness attributable to the household
        air pollution caused by the inefficient use of solid fuels for cooking.\n\n</string>
    <string name="biogas_is_eco_friendly">Biogas is Eco-Friendly</string>
    <string name="reduces_soil_and_water_pollution">Reduces Soil and Water Pollution</string>
    <string name="organic_fertilizer">Organic Fertilizer</string>
    <string name="it_s_a_simple_and_low_cost_technology">It’s A Simple and Low-Cost Technology</string>
    <string name="healthy_cooking_alternative">Healthy Cooking Alternative</string>
    <string name="benefits_of_biogas">Benefits of Biogas</string>
</resources>