<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".benefits_frag">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_safety"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_sides"
            android:orientation="vertical">

            <TextView
                android:id="@+id/safetyinfo_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="Safety and Precaustions"
                android:textColor="#00FD0A"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sh1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Anaerobic Digesters and Biogas Safety"
                android:textColor="#E91E63"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/safety_b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/safety_b1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sh2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Biogas Hazards"
                android:textColor="#E91E63"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/safety_b2_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  a) Fire/Explosion"
                android:textColor="#F44336" />

            <TextView
                android:id="@+id/safety_b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety_b2txt"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/safety_b3_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" b)Asphyxiation"
                android:textColor="#F44336"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/safety_b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety_b3"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/safety_b4_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" c)Disease"
                android:textColor="#F44336" />

            <TextView
                android:id="@+id/safety_b4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety_b4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/safety_b5_h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Precautions"
                android:textColor="#F31B65"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/safety_b5_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Manufacturer/Designer Warnings"
                android:textColor="#D84678"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/safety_b5_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety_b5_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/safety_b5_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Safety Walk-Throughs"
                android:textColor="#F12121"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/safety_b5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety_b5_2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/safety_b5_h3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gas Sensors"
                android:textColor="#BA3838"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/safety_b5_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety_b5_3"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>